# components

./: .gitignore  404.html  Cargo.toml  README.md  complaints.md  component.json  components.json  index.html
aria/: Cargo.toml
aria/src/: accordion.rs  alert.rs  button.rs  lib.rs
components/: Cargo.toml  build.rs
components/archive/src_old/display/: accordion.rs
components/archive/src_old/layout/: column.rs
components/archive/styles_old/core/: navbar.scss
components/archive/styles_old/minimal/: row.scss
components/src/: accordian.rs  accordion.rs  carousel.rs  column.rs  lib.rs  main.rs  props.rs  row.rs  style.rs  theme.rs  use_unique_id.rs
components/src/display/: accordion.rs  branding.rs  carousel.rs  mod.rs
components/src/input/: button.rs  button_group.rs  mod.rs
components/src/layout/: column.rs  container.rs  divider.rs  mod.rs  row.rs
components/src/nav/: mod.rs  navbar.rs
components/src/styles/: accordian.scss  accordion.scss  branding.scss  carousel.scss  column.scss  navbar.scss  row.scss
components/styles/: _var.scss
components/styles/core/: accordion.scss  column.scss  navbar.scss  row.scss
components/styles/input/: button.scss  button_group.scss
components/styles/layout/: divider.scss
components/styles/minimal/: accordion.scss  navbar.scss
dioxus-attributes/: Cargo.toml
dioxus-attributes/src/: attribute_list.rs  lib.rs
floating-ui-dom/: Cargo.toml
floating-ui-dom/src/: auto_update.rs  lib.rs  platform.rs  utils.rs
preview/: .stylelintrc.json  Cargo.toml  Dioxus.toml  build.rs  index.html  package.json
preview/assets/: accordion.css  alert-dialog.css  aspect-ratio.css  avatar.css  context-menu.css  dropdown-menu.css  dx-components-theme.css  hero.css  hover-card.css  language-select.css  main.css  prism.css  prism.js  radio-group.css  separator.css  slider.css  switch.css  theme.css  toggle-group.css  toolbar.css  tooltip.css
preview/public/assets/: progress.css
preview/src/: app.rs  main.rs  theme.rs
preview/src/accordion/: mod.rs
preview/src/aspect_ratio/: mod.rs
preview/src/avatar/: mod.rs
preview/src/calendar/: mod.rs  style.css
preview/src/components/: mod.rs  picker.css
preview/src/components/accordion/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/alert_dialog/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/aspect_ratio/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/avatar/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/badge/: component.json  component.rs  docs.md  style.css
preview/src/components/button/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/calendar/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/card/: component.json  component.rs  docs.md  style.css
preview/src/components/checkbox/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/collapsible/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/color_picker/: component.json  component.rs  docs.md  style.css
preview/src/components/combobox/: component.json  component.rs  docs.md  style.css
preview/src/components/context_menu/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/date_picker/: component.json  component.rs  docs.md  style.css
preview/src/components/dialog/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/drag_and_drop_list/: component.json  component.rs  docs.md  style.css
preview/src/components/dropdown_menu/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/form/: component.json  mod.rs  style.css
preview/src/components/hover_card/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/input/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/item/: component.json  component.rs  docs.md  style.css
preview/src/components/label/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/menubar/: component.json  component.rs  docs.md  mod.rs  style.css
preview/src/components/navbar/: component.json  docs.md  (+3 more)
preview/src/context_menu/: mod.rs
preview/src/dashboard/: common.rs  mod.rs
preview/src/dropdown_menu/: mod.rs
preview/src/form/: mod.rs
preview/src/hover_card/: mod.rs
preview/src/i18n/: de-DE.ftl  en-US.ftl  es-ES.ftl  fr-FR.ftl
preview/src/menubar/: mod.rs  style.css
preview/src/progress/: mod.rs
preview/src/radio_group/: mod.rs
preview/src/scroll_area/: mod.rs  style.css
preview/src/select/: mod.rs  style.css
preview/src/separator/: mod.rs
preview/src/slider/: mod.rs
preview/src/switch/: mod.rs
preview/src/tabs/: mod.rs  style.css
preview/src/toast/: mod.rs  style.css
preview/src/toggle_group/: mod.rs
preview/src/toolbar/: mod.rs
preview/src/tooltip/: mod.rs
primitives/: Cargo.toml  README.md  build.rs
primitives/src/: accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  calendar.rs  checkbox.rs  collapsible.rs  color_picker.rs  context_menu.rs  date_picker.rs  dialog.rs  drag_and_drop_list.rs  dropdown_menu.rs  floating.rs  focus.rs  focus_trap.rs  hover_card.rs  icon.rs  label.rs  lib.rs  listbox.rs  menubar.rs  move_interaction.rs  navbar.rs  otp.rs  pointer.rs  popover.rs  portal.rs  progress.rs  radio_group.rs  recycle_list.rs  scroll_area.rs  select.rs  selectable.rs  selection.rs  separator.rs  slider.rs  switch.rs  tabs.rs  (+6 more)
primitives/src/color_picker/: color_naming.rs
primitives/src/combobox/: context.rs  mod.rs
primitives/src/js/: focus-trap.js  hash.txt
primitives/src/select/: components.rs  context.rs  mod.rs  text_search.rs
primitives/src/ts/: focus-trap.ts
primitives/src/virtual/: mod.rs  types.rs  utils.rs  virtualizer.rs
test-harness/: Cargo.toml
test-harness/assets/: dx-components-theme.css
test-harness/src/: main.rs
test-harness/src/components/: mod.rs
(+875 files in other folders)
