[package]
name = "dioxus-aria"
version = "0.1.0"
edition = "2021"
authors = ["DogeDark"]
description = "An ARIA-compatible headless component library."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DioxusLabs/components/"
homepage = "https://dioxuslabs.com"
keywords = ["dom", "gui", "dioxus", "components"]
categories = ["gui", "wasm"]


[dependencies]
dioxus = { workspace = true }
