[package]
name = "dioxus-components"
version = "0.1.0"
edition = "2021"
authors = ["DogeDark"]
description = "Components made for Dioxus."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DioxusLabs/components/"
homepage = "https://dioxuslabs.com"
keywords = ["dom", "gui", "dioxus", "components"]
categories = ["gui", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
dioxus-sdk = { workspace = true }
manganis = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
grass = "0.13.2"


[features]
default = ["theme_minimal"]
theme_minimal = []