[package]
name = "dioxus-attributes"
version = "0.1.0"
edition = "2021"
description = "Proc macro for creating dynamic attribute lists for Dioxus elements"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
dioxus-rsx = "0.7.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
