[package]
name = "floating-ui-dom"
version = "0.1.0"
edition = "2021"
description = "DOM platform implementation for floating-ui-core"
license = "MIT OR Apache-2.0"

[dependencies]
floating-ui-core.workspace = true
euclid.workspace = true
web-sys = { version = "0.3", features = [
    "Element", "HtmlElement", "Window", "Document",
    "DomRect", "DomRectList", "CssStyleDeclaration",
    "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit",
    "ResizeObserver", "ResizeObserverEntry", "ResizeObserverSize",
    "EventTarget", "AddEventListenerOptions", "Node", "NodeList",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
