[package]
name = "preview"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-primitives.workspace = true
dioxus-i18n = { git = "https://github.com/ealmloff/dioxus-i18n", branch = "bump-dioxus" }
unic-langid = { version = "0.9", features = ["macros"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing.workspace = true
time = { version = "0.3.44", features = ["std", "macros"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }

[build-dependencies]
syntect = "5.2"
pulldown-cmark = "0.13.0"

[features]
web = ["dioxus/web", "dioxus-primitives/web"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server"]
native = ["dioxus/native"]
