[package]
name = "dioxus-primitives"
version = "0.0.1"
edition = "2021"
rust-version = "1.80.0"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "primitives"]
categories = ["gui", "wasm"]
authors = ["Dioxus Labs", "DogeDark"]
license = "MIT OR Apache-2.0"
homepage = "https://dioxuslabs.com"
repository = "https://github.com/DioxusLabs/components"

[dependencies]
dioxus.workspace = true
dioxus-time = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7" }
time = { version = "0.3.41", features = ["std", "macros", "parsing"] }
tracing.workspace = true

[build-dependencies]
lazy-js-bundle = "0.6.2"

[features]
default = ["router"]
router = ["dioxus/router"]
web = ["time/wasm-bindgen"]
