[package]
name = "dioxus-primitives"
version = "0.0.1"
edition = "2021"
rust-version = "1.80.0"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "primitives"]
categories = ["gui", "wasm"]
authors = ["Dioxus Labs", "DogeDark"]
license = "MIT OR Apache-2.0"
homepage = "https://dioxuslabs.com"
repository = "https://github.com/DioxusLabs/components"

[dependencies]
dioxus.workspace = true
dioxus-sdk-time = "0.7.0"
time = { version = "0.3.44", features = ["std", "macros", "parsing"] }
num-integer = "0.1.46"
tracing.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo-events = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlBodyElement",
    "CssStyleDeclaration",
    "EventTarget",
    "KeyboardEvent",
    "PointerEvent",
] }

[build-dependencies]
lazy-js-bundle = "0.6.2"

[features]
default = ["router"]
router = ["dioxus/router"]
web = ["time/wasm-bindgen"]
