[package]
name = "dioxus-primitives"
version = "0.0.1"
edition = "2021"
rust-version = "1.80.0"
readme = "../README.md"
keywords = ["gui", "dioxus", "components", "primitives"]
categories = ["gui", "wasm"]
authors = ["Dioxus Labs", "DogeDark"]
license = "MIT OR Apache-2.0"
homepage = "https://dioxuslabs.com"
repository = "https://github.com/DioxusLabs/components"

[dependencies]
dioxus.workspace = true
dioxus-sdk-time = "0.7.0"
time = { version = "0.3.44", features = ["std", "macros", "parsing"] }
num-integer = "0.1.46"
tracing.workspace = true
indexmap = "2.12.1"

[build-dependencies]
lazy-js-bundle = "0.6.2"

[features]
default = ["router"]
router = ["dioxus/router"]
web = ["time/wasm-bindgen"]
